chore: add github actions

--- a/retype.yml
+++ b/retype.yml
@@ -1,7 +1,7 @@
 ---
 input: .
 output: .retype
-url: https://i4ox.github.io
+url: https://i4ox.github.io/backend-go-wiki/
 branding:
   title: "Go Wiki"
   label: Docs
